feat: add PUT product endpoint
